--- a/src/index.css
+++ b/src/index.css
@@ -1,13 +1,356 @@
-body {
+@import url("https://fonts.googleapis.com/css2?family=Geo&display=swap");
+*,
+::before,
+::after {
+  padding: 0;
   margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
+  box-sizing: border-box;
+}
+/* 
+=============
+Global Styles
+==========
+ */
+
+:root {
+  --transition: all 0.3s ease-in;
 }
 
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-    monospace;
+/* 
+=============
+Animation
+==========
+ */
+@keyframes bounce {
+  0% {
+    transform: scale(1);
+  }
+  50% {
+    transform: scale(2);
+  }
+  100% {
+    transform: scale(1);
+  }
+}
+
+@keyframes move {
+  0% {
+    transform: translateX(-100%);
+  }
+  100% {
+    transform: translateX(100%);
+  }
+}
+
+/* 
+=============
+NavBar
+==========
+ */
+.navbar-container {
+  background: #272829;
+  display: flex;
+  justify-content: space-between;
+  border-bottom: 1px solid #333;
+  box-shadow: 1px 3px 10px 3px rgb(0 0 0 / 25%);
+  position: fixed;
+  width: 100%;
+  z-index: 4;
+  height: 4rem;
+}
+.nav-links {
+  display: none;
+}
+
+.nav-toggle {
+  display: block;
+  font-size: 1.5rem;
+  background: transparent;
+  border-color: transparent;
+  transition: var(--transition);
+  cursor: pointer;
+  color: turquoise;
+  margin-right: 2rem;
+  animation: bounce 2s ease infinite;
+}
+.nav-logo {
+  height: 4rem;
+  width: 7rem;
+  display: block;
+  margin-left: 2rem;
+}
+
+.navbar-links-mobile {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  display: block;
+  transition: var(--transition);
+  background: rgba(0, 0, 0, 0.5);
+}
+
+.nav-link {
+  color: black;
+  cursor: pointer;
+  font-family: "Geo", sans-serif;
+  font-size: 1.2rem;
+  font-weight: bold;
+  transition: var(--transition);
+  width: 100%;
+  display: block;
+  text-align: center;
+  padding: 32px;
+}
+
+.nav-link:hover {
+  color: turquoise;
+}
+/* 
+=============
+Home
+==========
+ */
+
+.hero {
+  position: relative;
+  height: 100vh;
+  overflow: hidden;
+}
+.home-container-img {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
+  z-index: 3;
+}
+.logo {
+  position: absolute;
+  top: 30%;
+  left: 50%;
+  width: 30%;
+  transform: translate(-50%, -30%);
+}
+
+/* 
+=============
+About
+==========
+ */
+.dummy-style {
+  height: 1000px;
+}
+
+.blend-about-bg {
+  background: url(./assets/blend.png) top center/cover no-repeat;
+  z-index: 4;
+  width: 100%;
+  margin-top: -25rem;
+  height: 100vh;
+  position: relative;
+}
+
+.about-bg {
+  background: url(./assets/aboutBg.png) center center/cover no-repeat;
+  margin-top: -10rem;
+  overflow: hidden;
+  padding-top: 0;
+  height: 100%;
+  width: 100%;
+  z-index: 5;
+  position: relative;
+}
+
+/* 
+=============
+Battle
+==========
+ */
+
+.battle-container {
+  background: url(./assets/images/battle_field.png) center center/cover;
+  width: 100%;
+  height: 220vh;
+}
+
+.cloud-img-container {
+  height: 120vh;
+  position: relative;
+  overflow: hidden;
+  width: 100%;
+  background: transparent;
+}
+.cloud-img {
+  position: absolute;
+  top: -20%;
+  width: 100%;
+  height: 100%;
+}
+.big-cloud1 {
+  left: -20%;
+}
+.big-cloud2 {
+  left: 20%;
+}
+.small-cloud {
+  position: absolute;
+  top: 55%;
+  left: 0;
+  max-width: 100%;
+  z-index: 5;
+  animation: move 8s linear infinite;
+}
+
+.small-cloud1 {
+  animation-duration: 10s;
+}
+.small-cloud2 {
+  animation-duration: 20s;
+}
+.small-cloud3 {
+  animation-duration: 30s;
+}
+.small-cloud4 {
+  animation-duration: 40s;
+}
+.small-cloud5 {
+  animation-duration: 50s;
+}
+
+/* 
+=============
+Battle
+==========
+ */
+
+.market-place-container {
+  background: url(./assets/images/marketplace.png) center center/cover;
+  height: 100vh;
+  position: relative;
+}
+.marketplace-img-container {
+  position: absolute;
+  left: 28%;
+  bottom: 10%;
+  transform: translate(-20%, -10%);
+  width: 50rem;
+  height: auto;
+  display: flex;
+  align-items: flex-end;
+}
+
+.bird-girl {
+  width: 8vw;
+}
+.snake-spawn {
+  width: 17vw;
+}
+.man-bear {
+  width: 15vw;
+}
+
+.dragon-spawn {
+  width: 25vw;
+}
+
+.marketplace-btn {
+  position: absolute;
+  top: 73%;
+  right: 15%;
+  width: 30%;
+}
+
+.marketplace-content {
+  position: relative;
+  cursor: pointer;
+  transition: transform 0.3s ease-in;
+}
+
+.marketplace-content:hover {
+  transform: translateY(-2px);
+}
+
+.marketplace-content svg {
+  margin-right: 1.8rem;
+}
+.marketplace-items {
+  display: flex;
+  justify-content: space-around;
+  align-items: center;
+  color: white;
+  font-weight: 800;
+  font-size: 2.2rem;
+  opacity: 0.5;
+  position: absolute;
+  top: 52%;
+  left: 10%;
+  transform: translateY(-50%);
+  transition: opacity 0.3s ease-in;
+}
+
+.marketplace-items:hover {
+  opacity: 1;
+}
+
+.shop-icon {
+}
+
+@media screen and (min-width: 800px) {
+  .navbar-container {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+  }
+  .navbar-items {
+    width: 80vw;
+    margin: 0 auto;
+    z-index: 4;
+  }
+  .nav-toggle {
+    display: none;
+  }
+  .nav-logo {
+    display: none;
+  }
+
+  .nav-links {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    position: relative;
+    height: 4rem;
+  }
+  .nav-link {
+    color: white;
+    cursor: pointer;
+    z-index: 10;
+    position: relative;
+  }
+
+  .nav-hover {
+    position: absolute;
+    top: 0;
+    left: 0;
+    bottom: 0;
+    background-color: rgba(64, 224, 208, 0.082);
+    width: 5rem;
+    height: 4rem;
+    z-index: -9;
+  }
+
+  /* .active::before {
+    content: "";
+    background: turquoise;
+    position: absolute;
+    width: 15.4rem;
+    height: 25%;
+    bottom: -140%;
+    left: auto;
+    z-index: -9;
+    transition: var(--transition);
+    clip-path: polygon(0% 0%, 100% 0%, 100% 30%, 70% 100%, 30% 100%, 0% 30%);
+  } */
 }
