--- a/src/index.css
+++ b/src/index.css
@@ -87,8 +87,8 @@ NavBar
 }
 
 .navbar-links-mobile {
-  position: absolute;
-  top: 0;
+  position: fixed;
+  top: 4rem;
   left: 0;
   width: 100%;
   height: 100%;
